<resources>
    <string name="app_name">跳蚤云图</string>
    <string name="book_list_tips">%1$d/%2$d种</string>
    <string name="book_list_tips_for_library">%1$d/%2$d种/%3$d册</string>
    <string name="book_list_tips_for_borrow">%1$d/%2$d册</string>
    <string name="book_list_author">作者</string>
    <string name="book_list_isbn">ISBN</string>
    <string name="book_list_publisher">出版社</string>
    <string name="book_list_publish_date">出版年</string>
    <string name="book_list_publish_category_name">类别</string>
    <string name="search">搜索</string>
    <string name="no_summary">暂无简介</string>
    <string name="statistics_borrow_count">%d人借阅</string>
    <string name="statistics_praise_count">%d人点赞</string>
    <string name="statistics_recommend_count">%d人荐购</string>
    <string name="statistics_read_count">%d人阅读</string>
    <string name="have_other_time">余</string>
    <string name="have_other_time_hour">小时</string>
    <string name="have_other_time_day">天</string>
    <string name="have_other_time_today">今日到期</string>
    <string name="have_other_time_due_time">逾期</string>
    <string name="have_bought">已购买</string>
    <string name="have_re_buy">已赔书</string>
    <string name="have_return">已还书</string>
    <string name="load_failed">加载失败，点击重新加载！</string>
    <string name="found_0_data">发现0条数据！</string>
    <string name="network_fault">网络请求失败！</string>
    <string name="loading">加载中…</string>
    <string name="deleting">删除中...</string>
    <string name="sending">发送中...</string>
    <string name="emoji_tips">内容可能含有表情，请修改重试！</string>
    <string name="text_library_introduce">本馆介绍</string>
    <string name="text_library_information">本馆资讯</string>
    <string name="text_library_grade">查看分馆</string>
    <string name="text_library_super_grade">上级馆</string>
    <string name="temporarily_no_data">暂无数据！</string>
    <string name="text_open_time">开放时间</string>
    <string name="long_to_open">定期开放</string>
    <string name="today_open_time">今日开放</string>
    <string name="supervise_the_phone">投诉电话</string>
    <string name="constant_phone_number">联系电话</string>
    <string name="call_phone_number">是否拨打联系电话？</string>
    <string name="whether_the_complaint_calls">是否拨打投诉电话？</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pager_books">馆藏图书%s册</string>
    <string name="ebooks">电子书%s种</string>
    <string name="library_list_tips">%1$d/%2$d</string>
    <string name="bar_number">条码号</string>
    <string name="bar_number2">条码号%s</string>
    <string name="frame_code">排架号 %s</string>
    <string name="call_number">索书号 %s</string>
    <string name="call_number2">索书号</string>
    <string name="stay_library2">所在馆</string>
    <string name="source">来源：%s</string>
    <string name="sponsor">主办方：%s</string>
    <string name="borrow_book_date">借阅日</string>
    <string name="bought_time">时间</string>
    <string name="bought_money">金额</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_email">用户名错误！</string>
    <string name="error_invalid_password">密码为6位数字！</string>
    <string name="error_incorrect_password">密码不能为空！</string>
    <string name="error_field_required">用户名不能为空！</string>
    <string name="error_compare_new_password">新密码不一致！</string>
    <string name="error_compare_password">密码设置不一致！</string>
    <string name="new_pwd_empty_tip">新密码不能为空！</string>
    <string name="id_card_not_register">"账号未注册！"</string>
    <string name="password_error">密码错误！</string>
    <string name="account_or_pwd_error">用户名或密码错误！</string>
    <string name="not_banding_phone">手机号未绑定！</string>
    <string name="login_failure">身份验证失败!</string>
    <string name="digits_txt">0123456789Xx</string>
    <string name="modify_user_head_failed">修改头像失败，是否重试？</string>
    <string name="expireCount">已逾期：%1$d</string>
    <string name="exit_from_current_account">退出当前账号</string>
    <string name="exit_login_prompt">退出登录，您将无法收到逾期报警信息，确定退出？</string>
    <string name="new_last_version">(最新版本号：V%s)</string>
    <string name="not_installed_qq_client">未安装QQ客户端！</string>
    <string name="not_installed_wx_client">未安装微信客户端！</string>
    <string name="not_installed_sina_client">未安装新浪微博客户端！</string>
    <string name="share_success">分享成功！</string>
    <string name="share_fail">分享失败！</string>
    <string name="share_cancel">分享取消！</string>
    <string name="deposit_0">您的押金为0.00元!</string>
    <string name="library_deposit">单位押金 %s</string>
    <string name="overdue_fines">您尚欠逾期罚金%s元，请及时补交！</string>
    <string name="platform_deposit">平台押金 %s</string>
    <string name="canuse_deposit">可用押金 %s</string>
    <string name="library_canues_deposit">可用押金 %s</string>
    <string name="usable_deposit">可用 %s</string>
    <string name="deposit_balance_occupy_deposit">押金余额 %1s&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;占用押金 %2s</string>
    <string name="deposit_balance_penalty">押金余额 %1s&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;逾期罚金 %2s</string>
    <string name="deposit_balance">押金余额 %s</string>
    <string name="library_deposit_code">单位代码</string>
    <string name="library_deposit_name">单位名称</string>
    <string name="library_deposit_money">金额</string>
    <string name="library_deposit_can_use">可用</string>
    <string name="pay_deposit_constant_money">充%s元</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_success">修改成功！</string>
    <string name="change_failure">修改失败！</string>
    <string name="old_pwd_error">原密码错误</string>
    <string name="has_days">余%s天</string>
    <string name="during_time">期间 %s</string>
    <string name="during_time2">有效期： %s</string>
    <string name="borrow_date">借书%s</string>
    <string name="return_date">还书%s</string>
    <string name="lost_date">赔书%s</string>
    <string name="buy_date">购买%s</string>
    <string name="save_success">保存成功！</string>
    <string name="save_failure">保存失败！</string>
    <string name="success">成功！</string>
    <string name="failure">失败！</string>
    <string name="input_phone">1234567890</string>
    <string name="note_content_empty">内容不能为空！</string>
    <string name="repeat_original_number">与原号码重复！</string>
    <string name="phone_number_can_not_empty">手机号不能为空！</string>
    <string name="phone_number_wrong">手机号错误！</string>
    <string name="code_can_not_empty">验证码不能为空！</string>
    <string name="code_wrong">验证码错误！</string>
    <string name="already_recommend_book_sum">您已推荐%d册</string>
    <string name="can_recommend_book_sum">本月还可推荐%d册</string>
    <string name="have_been_recommend">已经推荐此书！</string>
    <string name="no_more_recommend_count">当月推荐次数已满！</string>
    <string name="enter_ISBN_number">请输入ISBN号！</string>
    <string name="ISBN_code_error">ISBN错误！</string>
    <string name="no_book_information">暂无此书资料！</string>
    <string name="reader_current_position">当前位置：%s</string>
    <string name="reader_current_position_weak">GPS信号弱，请在开阔处重新定位！</string>
    <string name="reader_current_position_no_permission">未开启定位！</string>
    <string name="book_sum">藏书  %s  册</string>
    <string name="app_update_log">更新日志 %s</string>
    <string name="app_update_time">更新时间 %s</string>
    <string name="letter_list">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="can_use_deposit">可用押金 %s</string>
    <string name="take_deposit">占用押金 %s</string>
    <string name="online_available_balance">线上可退 %s</string>
    <string name="offline_available_balance">线下可退 %s</string>
    <string name="money_not_empty">金额不能为空！</string>
    <string name="enter_correct_amount">请输入正确的金额！</string>
    <string name="withdraw_deposit_more_than_one">提现金额不小于1元！</string>
    <string name="have_penalty_can_not_withdraw_deposit">存在逾期罚金未处理，无法退押金！</string>
    <string name="withdraw_deposit_limit_money_once">您单次最多能退%s元！</string>
    <string name="withdraw_deposit_limit_money">您最多能退%s元！</string>
    <string name="withdraw_deposit_success">退押金成功!预计0~7个工作日到账！</string>
    <string name="withdraw_deposit_failed">退押金失败！</string>
    <string name="withdraw_deposit_wx">微信退款预计4月1日开通，给您带来不便，敬请谅解！</string>
    <string name="wechat_not_empty">微信账户不能为空！</string>
    <string name="alipay_not_empty">支付宝账户不能为空！</string>
    <string name="name_not_empty">实名认证不能为空！</string>
    <string name="library_hall_code">馆号：%s</string>
    <string name="library_name">馆名：%s</string>
    <string name="library_mail">邮箱：%s</string>
    <string name="library_tel"><![CDATA[ <font size=16sp color=#999999>电话：</font><font size=16sp color=#3996CF>%1$s</font> ]]></string>
    <string name="library_net"><![CDATA[ <font size=16sp color=#999999>网站：</font><font size=16sp color=#3996CF>%1$s</font> ]]></string>
    <string name="library_address"><![CDATA[  <img src="R.mipmap.position"></img>]]></string>
    <string name="change_attention_lib_tip">是否替换已关注的%s？</string>
    <string name="attention_failed">关注失败，请重试</string>
    <string name="attention_success">已关注</string>
    <string name="cancel_attention_failed">取消关注失败，请重试</string>
    <string name="cancel_attention_success">已取消</string>
    <string name="set_attention_lib"><u>前往设置</u></string>
    <string name="order_book_success">预约成功！\n请%s于24小时内到馆办借\n预约每日限2册，每月限6册</string>
    <string name="order_book_failed_too_more">预约超限次！\n预约每日限2册，每月限6册</string>
    <string name="order_book_failed_no_permission">预约失败！\n您在该图书馆无预约权限！</string>
    <string name="order_book_failed_unable_borrow">预约失败！\n本书不支持外借！</string>
    <string name="order_book_failed_no_book">预约失败！\n暂无可预约书籍！</string>
    <string name="order_book_failed">预约失败！</string>
    <string name="cancel_reservation_tip">确定取消预约?</string>
    <string name="borrow_book_lib_info"><![CDATA[ <font size=16sp color=#666666>%1$s</font><font size=16sp color=#ee7853> %2$s</font> ]]></string>
    <string name="read_count">阅读 %d</string>
    <string name="location_failed">定位失败！</string>
    <string name="location_loading">定位中......</string>
    <string name="change_phone_num">更改手机号</string>
    <string name="binding_phone_num">绑定手机号</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="send_verify_code_again">再次发送</string>
    <string name="account_login_other_device">账号已在其它设备登录，请确认是否本人操作！</string>
    <string name="send_verify_code_failed">发送失败！</string>
    <string name="send_verify_code_success">发送成功！</string>
    <string name="phone_num_exist">手机号已存在！</string>
    <string name="binding_phone_num_success">绑定手机号成功！</string>
    <string name="binding_phone_num_failed">绑定手机号失败！</string>
    <string name="modify_binding_phone_num_success">修改手机号成功！</string>
    <string name="modify_binding_phone_num_failed">修改手机号失败！</string>
    <string name="verify_code_invalid">验证码无效！</string>
    <string name="read_count_ebook">%d人阅读</string>
    <string name="idcard_empty_tip">身份证号不能为空！</string>
    <string name="idcard_error_tip">身份证号错误！</string>
    <string name="phone_code_not_fit">手机号不一致！</string>
    <string name="forget_pwd_no_binding_phone">您的证件未绑定手机号，请持证到就近云图书馆办理！</string>
    <string name="forget_pwd_no_register">您的身份证未注册,请持证件原件到附近云图书馆平台办理！</string>
    <string name="forget_pwd_next">下一步</string>
    <string name="forget_pwd_change_phone_tip">如果您已更换手机号，请持证件原件到附近云图书馆平台办理！</string>
    <string name="action_been_start_cant_apply">活动已经开始，不允许报名！</string>
    <string name="action_register_user_tip">已注册请登录报名！</string>
    <string name="action_been_apply">已报名！</string>
    <string name="cancel">取消</string>
    <string name="please_input_reader_psw">请输入账户密码</string>
    <string name="confirm_use_deposit">确认扣押金</string>
    <string name="confirm_self_buy_book">请确认购书</string>
    <string name="user_nick_name_tips">昵称由中文、英文、数字、-和_组成。</string>
    <string name="nick_name">昵称</string>
    <string name="take_picture">拍照</string>
    <string name="choose_picture">手机相册选择</string>
    <string name="system_picture">系统推荐头像</string>
</resources>