<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/library_deposit_parent"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/color_ffffff">

    <TextView
        android:id="@+id/library_deposit_code"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:text="@string/library_deposit_code"
        android:textColor="#444444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/library_deposit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/library_deposit_code"
        android:layout_toLeftOf="@+id/library_deposit_money"
        android:layout_toRightOf="@+id/library_deposit_code"
        android:layout_toStartOf="@+id/library_deposit_money"
        android:gravity="center"
        android:text="@string/library_deposit_name"
        android:singleLine="true"
        android:textColor="#444444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/library_deposit_money"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/library_deposit_can_use"
        android:layout_toStartOf="@+id/library_deposit_can_use"
        android:gravity="end"
        android:text="@string/library_deposit_money"
        android:textColor="#444444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/library_deposit_can_use"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:gravity="end|center_vertical"
        android:text="@string/library_deposit_can_use"
        android:textColor="#444444"
        android:textSize="16sp" />

</RelativeLayout>