<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_psw_root_view_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tzpt.cloudlibrary.ui.account.selfhelp.VerifyPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="53dp"
        android:background="@drawable/bg_border3dp_ddd"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/confirm_self_buy_book"
            android:textColor="#000000"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cacacb" />

        <EditText
            android:id="@+id/self_buy_book_money_et"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round_d0d0d0"
            android:enabled="false"
            android:hint="金额"
            android:paddingLeft="7.5dp"
            android:paddingRight="7.5dp"
            android:textColor="#999999"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/self_buy_book_psw_et"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round_d0d0d0"
            android:hint="@string/please_input_reader_psw"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:paddingLeft="7.5dp"
            android:paddingRight="7.5dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="15sp" />

        <Button
            android:id="@+id/self_buy_book_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/phone_manage_button_bg"
            android:enabled="false"
            android:text="@string/confirm_use_deposit"
            android:textColor="@color/color_ffffff"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>
